--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 margin-top: -1vw;
                 height: 100vh;
                 font-size: 5vw; 
+                font-weight: bolder;;
                 text-shadow: 0.5rem 0.5rem rgba(70, 65, 65, 0.397);
             }
            #about-me
