--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 margin-top: -1vw;
                 height: 100vh;
                 font-size: 5vw; 
-                font-weight: bolder;;
+                font-weight: bolder;
                 text-shadow: 0.5rem 0.5rem rgba(70, 65, 65, 0.397);
             }
            #about-me
@@ -92,7 +92,8 @@
             height: 45vh;
             width: 20%;
             position: relative;
-            font-family: cursive; 
+            font-family: "Times New Roman", cursive; 
+            font-style: italic;
             font-weight: bolder;
             font-size: 1.25rem;
             text-align: center;
@@ -311,7 +312,7 @@
         </nav>
         <div id="main-content">
                 <p class="pinmain-content" style="text-align: center; position: relative; top: 45vh; color: black;
-                font-family: cursive;">Hi I'm Suchandra&nbsp;Datta</p>       
+                font-family: 'Times New Roman', cursive; font-style: italic;">Hi I'm Suchandra&nbsp;Datta</p>       
         </div>
         
         <div id="about-me">
