--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </nav>
         <div id="main-content">
                 <p class="pinmain-content" style="text-align: center; position: relative; top: 45vh; color: black;
-                font-family: 'Times New Roman', cursive; font-style: italic;">Hi I'm Suchandra&nbsp;Datta</p>       
+                font-family: TimesNewRoman, 'Times New Roman', cursive; font-style: italic;">Hi I'm Suchandra&nbsp;Datta</p>       
         </div>
         
         <div id="about-me">
