--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
             height: 45vh;
             width: 20%;
             position: relative;
-            font-family: "Times New Roman", cursive; 
+            /*font-family: "Times New Roman", cursive; */
             font-style: italic;
-            font-weight: bolder;
             font-size: 1.25rem;
             text-align: center;
             background-color: rgb(30, 112, 145);            
@@ -312,7 +311,7 @@
         </nav>
         <div id="main-content">
                 <p class="pinmain-content" style="text-align: center; position: relative; top: 45vh; color: black;
-                font-family: TimesNewRoman, 'Times New Roman', cursive; font-style: italic;">Hi I'm Suchandra&nbsp;Datta</p>       
+                 font-style: italic;">Hi I'm Suchandra&nbsp;Datta</p>       
         </div>
         
         <div id="about-me">
