Some updates to CSS

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
             position: relative;
             /*font-family: "Times New Roman", cursive; */
             font-style: italic;
-            font-size: 1rem;
+            font-size: 1.2rem;
             text-align: center;
-            background-color: rgb(30, 112, 145);            
+            background-color: rgba(30, 112, 145,0.8);  
+            border-radius: 3%;
+            
         }
         #contactMe 
         {
@@ -137,7 +139,7 @@
                             </p>
                     </div>
                     <div class="col-sm-3">
-                            <img class="myImage" src="me.png" alt="My photo"/>
+                            <img class="img-responsive myImage" src="me.png" alt="My photo"/>
                     </div>  
                     <div class="col-sm-3">
                             <p class="rightText" style="color: white;">
@@ -146,18 +148,17 @@
                             </p>
                     </div>
                 </div>
-                <br/>
                 <div class="row mx-5 mt-5" style="position: relative; top: 25vh;">
                         <div  class="col-md-3 sm-2 mx-4 mt-5" id="project-link">
                                 <a href="https://github.com/SuchandraDatta/GraduationProject"> 
                                  Mood detection using Deep Neural Networks
-                                 <img src="MLpic.jpeg" alt="ML picture" height="70%" width="100%" style="position: relative; top: 6.5%;"/>
+                                <img src="MLpic.jpeg" alt="ML picture" width="100%" style="position: relative; top: 6.5%;"/>
                                  </a>
                         </div>
                         <div  class="col-md-3 sm-2 mx-4 mt-5" id="project-link">
                                 <a href="https://github.com/SuchandraDatta/MachineLearningProjects/tree/master/BOWclassifierCompare"> 
                                 Customer review classification
-                                <img src="customerReview.png" alt="ML picture" height="70%"  width="97%" style="position: relative; margin-top: 15.5%"/>
+                                <img src="customerReview.jpg" alt="ML picture" width="100%" style="position: relative; margin-top: 15.5%"/>
                                 </a>
                         </div>
                         <div  class="col-md-3 sm-2 mx-4 mt-5" id="project-link">
