--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             position: relative;
             /*font-family: "Times New Roman", cursive; */
             font-style: italic;
-            font-size: 1.2rem;
+            font-size: 1rem;
             text-align: center;
             background-color: rgba(30, 112, 145,0.8);  
             border-radius: 3%;
@@ -189,7 +189,7 @@
                         <div  class="col-md-3 sm-2 mx-4 mt-5 project-link">       
                                 <a href="https://github.com/SuchandraDatta/GraduationProject" style="color: balck;"> 
                                     Mood detection using Deep Neural Networks
-                                <img src="MLpic.jpeg" alt="ML picture" width="100%" style="position: relative; top: 6.5%;"/>
+                                <img src="MLpic.jpeg" alt="ML picture" width="100%" style="position: relative; margin-top: 6.5%;"/>
                                  </a>
                                 
                         </div>
@@ -200,10 +200,10 @@
                                 </a>
                         </div>
                         <div  class="col-md-3 sm-2 mx-4 mt-5 project-link">
-                                <a class="binImgClassify" href="https://github.com/SuchandraDatta/MachineLearningProjects/tree/master/dogCatCNNClassifier"  
+                                <a class="binImgClassify" href="https://github.com/SuchandraDatta/WebDevelopment/tree/master/firstDjangoProject/ProductPriceCompare"  
                                 > 
-                                 Binary Image Classification using CNN
-                                 <img src="CNN.jpg" alt="ML picture" width="99%" style="position: relative; margin-top: 9.5%"/>
+                                 Product price comparison using BeautifulSoup, Django and urllib
+                                 <img src="CNN.png" alt="Web scraper picture" width="99%" style="position: relative; margin-top: 5.5%"/>
                                  </a>
                         </div>
                         <div  class="col-md-3 sm-2 mx-4 mt-5 project-link">
