Updating all links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12" id="main-content">
+                        <div style="position: relative; margin: 10% auto 0; width: 20%;">
+                            <img src="./me.png" width="200px" style="border-radius: 50%;">
+                        </div>
                             <p id="title" >Hi I'm Suchandra&nbsp;Datta</p>       
                     </div>
                 </div>
@@ -108,8 +111,9 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <div class="text-about-me" id="about-me">
-                                Hello. This is my portfolio page where I attempt to showcase the projects which I've done. I'm a computer science graduate student from St. Xavier's College Kolkata, currently pursuing M.Sc. in Computer Science from the same college. I'm passionate anout problem solving, converting concepts to apps that solve  real-world problems. Interested in machine learning and web development.
+                                Hello. This is my portfolio page where I attempt to showcase the projects which I've done. I'm a computer science graduate student from St. Xavier's College Kolkata, currently pursuing M.Sc. in Computer Science from the same college. I'm passionate about problem solving, converting concepts to apps that solve  real-world problems with an avid interest in machine learning and web development.
                             </div>
                         </div>
                     </div>
@@ -125,7 +129,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('pic1.jpg');">
                             Mood Analysis Using Convolutional Neural Networks<br/>
                             <div class="projectButton">
-                            <a href="#">View source code</a>
+                            <a href="https://github.com/SuchandraDatta/GraduationProject">View source code</a>
                             </div>
                         </div>
                         
@@ -136,7 +140,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('pic2.jpg');">
                             Product price comparison using BeautifulSoup and Django
                             <br/><div class="projectButton">
-                                <a href="#">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/ProductPriceCompareDJANGO">View source code</a>
                                 </div>
                         </div>
                     </div>
@@ -144,7 +148,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3.jpg'); ">
                             Customer Review Classification using Deep Learning
                             <br/><div class="projectButton">
-                                <a href="#">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/MachineLearningProjects">View source code</a>
                                 </div>
                         </div>
                     </div>
@@ -152,7 +156,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('React.gif'); ">
                             React App(Create, Read, Update, Delete)
                             <br/><div class="projectButton">
-                                <a href="#">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/ReactCRUDapp">View source code</a>
                                 </div>
                         </div>
                     </div>
@@ -162,7 +166,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('pic4.jpg'); ">
                             College Tech Fest Website(eXabyte 2020)
                             <br/><div class="projectButton">
-                                <a href="#">View source code</a>
+                                <a href="http://exabyte.sxccal.edu/team.html">View source code</a>
                                 </div>
                         </div>
                     </div>
