--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="row mt-5 justify-content-center">
                     <div class="col-md-4">
                         
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic1.jpg');">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic1-min.jpg');">
                             Mood Analysis Using Convolutional Neural Networks<br/>
                             <div class="projectButton">
                             <a href="https://github.com/SuchandraDatta/GraduationProject">View source code</a>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="row mt-5 justify-content-center">
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic2.jpg');">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic2-min.jpg');">
                             Product price comparison using BeautifulSoup and Django
                             <br/><div class="projectButton">
                                 <a href="https://github.com/SuchandraDatta/ProductPriceCompareDJANGO">View source code</a>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3.jpg'); ">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3-min.jpg'); ">
                             Customer Review Classification using Deep Learning
                             <br/><div class="projectButton">
                                 <a href="https://github.com/SuchandraDatta/MachineLearningProjects">View source code</a>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="row mt-5  justify-content-center">
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic4.jpg'); ">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic4-min.jpg'); ">
                             College Tech Fest Website(eXabyte 2020)
                             <br/><div class="projectButton">
                                 <a href="http://exabyte.sxccal.edu/team.html">View source code</a>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="matrix" style="background-image: url('./matrix.gif'); position: relative; margin-top: 10%; height: 200vh;">
+                <div class="matrix">
                 <div style="color: white; text-align: center; padding: 10%;">
                     <h1>MY SKILLSET</h1>
                  </div>
