--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
                     </div>
                     <div class="col-md-4 mt-5">
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3-min.jpg'); ">
-                            Customer Review Classification using Deep Learning
+                            COVID19 HOSPITAL TRACKER using Python, AngularJS, NodeJS
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/MachineLearningProjects">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/COVIDindiaHospitalTracker">View source code</a>
                                 </div>
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('React.gif'); ">
-                            React App(Create, Read, Update, Delete)
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('foodpic.jpg'); ">
+                            Vegans Recipe Blog using PHP, MySQL
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/ReactCRUDapp">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/VegansBlog">View source code</a>
                                 </div>
                         </div>
                     </div>
