--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="col-sm-12" id="main-content">
                         <div style="position: relative; margin: 10% auto 0; width: 20%;">
-                            <img src="./me.png" width="200px" style="border-radius: 50%;">
+                            <img src="./me.webp" width="200px" style="border-radius: 50%;" alt="Intro picture">
                         </div>
                             <p id="title" >Hi I'm Suchandra&nbsp;Datta</p>       
                     </div>
@@ -126,7 +126,7 @@
                 <div class="row mt-5 justify-content-center">
                     <div class="col-md-4">
                         
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic1-min.jpg');">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic1-min.webp');">
                             Mood Analysis Using Convolutional Neural Networks<br/>
                             <div class="projectButton">
                             <a href="https://github.com/SuchandraDatta/GraduationProject">View source code</a>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="row mt-5 justify-content-center">
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic2-min.jpg');">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic2-min.webp');">
                             Product price comparison using BeautifulSoup and Django
                             <br/><div class="projectButton">
                                 <a href="https://github.com/SuchandraDatta/ProductPriceCompareDJANGO">View source code</a>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3-min.jpg'); ">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic3-min.webp'); ">
                             COVID19 HOSPITAL TRACKER using Python, AngularJS, NodeJS
                             <br/><div class="projectButton">
                                 <a href="https://github.com/SuchandraDatta/COVIDindiaHospitalTracker">View source code</a>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('foodpic.jpg'); ">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('foodpic.webp'); ">
                             Vegans Recipe Blog using PHP, MySQL
                             <br/><div class="projectButton">
                                 <a href="https://github.com/SuchandraDatta/VegansBlog">View source code</a>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="row mt-5  justify-content-center">
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic4-min.jpg'); ">
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('pic4-min.webp'); ">
                             College Tech Fest Website(eXabyte 2020)
                             <br/><div class="projectButton">
                                 <a href="http://exabyte.sxccal.edu/team.html">View source code</a>
@@ -199,9 +199,9 @@
                     </div>
                  </footer>
     </body>
-    <script async src="./counterJS.js"></script>
-    <script async src="./index.js"></script>
-    <script async src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script defer src="./counterJS.js"></script>
+    <script defer src="./index.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
