--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
                      <ul>
                         <li><a href="https://github.com/SuchandraDatta"><i class="fa fa-github fa-5x"></i> </a></li>
                         <li><a href="https://www.linkedin.com/in/suchandra-datta-9723801a4/"><i class="fa fa-linkedin fa-5x"></i></a></li>
+                        <li><a href="https://medium.com/@suchandra1234"><i class="fa fa-medium fa-5x"></i></a></li>
+                        <li><a href="https://www.freecodecamp.org/news/author/suchandra/"><i class="fa fa-free-code-camp fa-5x"></i></a></li>
                         <li><a href="https://www.instagram.com/code_euphoria/"><i class="fa fa-instagram fa-5x"></i></a></li>
-                        </ul>
+                    </ul>
                     </div>
                  </footer>
     </body>
