--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/foodpic.webp'); ">
-                            Vegans Recipe Blog using PHP, MySQL
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/pic3.jpg'); ">
+                            Bit level encryption using chaos version 1.0
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/VegansBlog">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/Bit_Level_Encryption_Using_Chaos_V1">View source code</a>
                                 </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/pic4-min.webp'); ">
                             College Tech Fest Website(eXabyte 2020)
                             <br/><div class="projectButton">
-                                <a href="http://exabyte.sxccal.edu/team.html">View source code</a>
+                                <a href="https://github.com/SuchandraDatta/ExaByte_2020">View source code</a>
                                 </div>
                         </div>
                     </div>
