--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj3.jpg'); ">
-                            College Fest Website(eXabyte 2020)
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj4.jpg'); ">
+                            NER for Bengali language using Transformers
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/ExaByte_2020">View code</a>
+                                <a href="https://github.com/SuchandraDatta/bengali_language_NER">View code</a>
                                 </div>
                         </div>
                     </div>
                     <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj4.jpg'); ">
-                            Mood Analysis Using CNN
+                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj3.jpg'); ">
+                            College Fest Website(eXabyte 2020)
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/GraduationProject">View code</a>
+                                <a href="https://github.com/SuchandraDatta/ExaByte_2020">View code</a>
                                 </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <li><a href="https://www.linkedin.com/in/suchandra-datta-9723801a4/"><i class="fa fa-linkedin fa-5x"></i></a></li>
                         <li><a href="https://medium.com/@suchandra1234"><i class="fa fa-medium fa-5x"></i></a></li>
                         <li><a href="https://www.freecodecamp.org/news/author/suchandra/"><i class="fa fa-free-code-camp fa-5x"></i></a></li>
-                        <li><a href="https://www.instagram.com/code_euphoria/"><i class="fa fa-instagram fa-5x"></i></a></li>
+                        
                     </ul>
                     </div>
                  </footer>
