--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                             
                             <div class="text-about-me" id="about-me">
-                                Hello. This is my portfolio page where I attempt to showcase the projects which I've done. I'm a computer science graduate student from St. Xavier's College Kolkata, currently pursuing M.Sc. in Computer Science from the same college. I'm passionate about problem solving, using my skills to develop apps that solve  real-world problems with an avid interest in machine learning and web development.
+                                Hello. This is my portfolio page where I attempt to showcase the projects which I've done. I work as a software engineer ( machine learning ) at a fintech-based startup, where my primary task is to train classification and NER models for information extraction from financial documents.
                             </div>
                         </div>
                     </div>
@@ -126,9 +126,9 @@
                 <div class="row mt-5 justify-content-center">
                     <div class="col-md-4">
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj1.jpg');">
-                            Emotion Detection Web App<br/>
+                            NER model for Bengali language
                             <div class="projectButton">
-                            <a href="https://github.com/SuchandraDatta/Emotion_Detection_Web_App">View code</a>
+                            <a href="https://github.com/SuchandraDatta/bengali_language_NER">View code</a>
                             </div>
                         </div>
                         
@@ -145,17 +145,9 @@
                     </div>
                     <div class="col-md-4 mt-5">
                         <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj4.jpg'); ">
-                            NER for Bengali language using Transformers
+                            Emotion Detection Web App<br/>
                             <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/bengali_language_NER">View code</a>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5">
-                        <div class="ml-5 mr-5 eachCard" style="background-image: url('./images/proj3.jpg'); ">
-                            College Fest Website(eXabyte 2020)
-                            <br/><div class="projectButton">
-                                <a href="https://github.com/SuchandraDatta/ExaByte_2020">View code</a>
+                                <a href="https://github.com/SuchandraDatta/Emotion_Detection_Web_App">View code</a>
                                 </div>
                         </div>
                     </div>
